--- a/index.html
+++ b/index.html
@@ -12,22 +12,81 @@
   <main>
     <header>
       <div class="logo">
-        <img src="./data/logo.png" alt="로고 이미지">
+        <a href="#"><img src="./data/logo.png" alt="로고 이미지"></a>
       </div>
+      
       <nav class="main-menu">
-        <div class="sub-main"></div>
+        <ul>
+          <li><a href="#">축제 정보</a>
+            <ul class="sub-menu">
+              <li><a href="">이벤트</a></li>
+              <li><a href="">축제&행사</a></li>
+              <li><a href="">전시</a></li>
+            </ul>
+          </li>
+          <li><a href="#">추천</a>
+            <ul class="sub-menu">
+              <li><a href="">테마 코스</a></li>
+              <li><a href="">한국관광지</a></li>
+            </ul>
+          </li>
+          <li><a href="#">여행지</a>
+            <ul class="sub-menu">
+              <li><a href="">계절별 명소</a></li>
+              <li><a href="">명소</a></li>
+            </ul>
+          </li>
+          <li><a href="#">여행 정보</a>
+            <ul class="sub-menu">
+              <li><a href="">시티투어버스 정보</a></li>
+              <li><a href="">자주 묻는 질문</a></li>
+              <li><a href="">1:1 상담</a></li>
+            </ul>
+          </li>
+        </ul>
       </nav>
     </header>
 
     <div class="swapper">
-      <div class="slide-img"></div>
+      <div class="slide-img">
+        <img src="./data/slide1.jpg" alt="slide 1">
+        <img src="./data/slide2.jpg" alt="slide 2">
+        <img src="./data/slide3.jpg" alt="slide 3">
+      </div>
     </div>
     <div class="contents">
-      <div class="shortcut"></div>
-      <div class="gallery"></div>
-      <div class="notice"></div>
+      <div class="shortcut">
+        <div class="data1">
+          <a href=""></a>
+          <p>쉽게 정보를 찾아보고 저에게 맞는 일정조정을 통해서 처음부터 끝까지 완벽한 추억을 만들 수 있었어요!</p>
+        </div>
+        <div class="data2">
+          <a href=""></a>
+          <p>생각보다 축제와 이벤트 관련 정보가 많고 잦은 업데이트로 시간날때마다 이사이트를 통해 알아보고 있어요!</p>
+        </div>
+      </div>
+      <div class="gallery">
+        <h2>갤러리</h2>
+        <ul>
+          <a href=""></a>
+          <a href=""></a>
+          <a href=""></a>
+        </ul>
+      </div>
+      <div class="notice">
+        <h2>공지사항</h2>
+        <ul>
+          <a href=""></a>
+          <a href=""></a>
+          <a href=""></a>
+          <a href=""></a>
+          <a href=""></a>
+        </ul>
+      </div>
     </div>
   </main>
+
+
   <footer>
     <div class="footer-logo"></div>
     <div class="copyrighter"></div>
