--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
             <ul class="sub-menu">
               <li><a href="">테마 코스</a></li>
               <li><a href="">한국관광지</a></li>
+              <li class="hidden"><a href="">추가</a></li>
             </ul>
           </li>
           <li><a href="#">여행지</a>
             <ul class="sub-menu">
               <li><a href="">계절별 명소</a></li>
               <li><a href="">명소</a></li>
+              <li class="hidden"><a href="">추가</a></li>
             </ul>
           </li>
           <li><a href="#">여행 정보</a>
@@ -57,48 +59,72 @@
     <div class="contents">
       <div class="shortcut">
         <div class="data1">
-          <a href=""></a>
-          <p>쉽게 정보를 찾아보고 저에게 맞는 일정조정을 통해서 처음부터 끝까지 완벽한 추억을 만들 수 있었어요!</p>
+          <img src="./data/shortcut1.jpg" alt="">
+          <div>
+            <p>&nbsp;쉽게 정보를 찾아보고 저에게 맞는 일정조정을 통해서 처음부터 끝까지 완벽한 추억을 만들 수 있었어요!</p>
+          </div>
         </div>
         <div class="data2">
-          <a href=""></a>
-          <p>생각보다 축제와 이벤트 관련 정보가 많고 잦은 업데이트로 시간날때마다 이사이트를 통해 알아보고 있어요!</p>
+          <img src="./data/shortcut2.jpg" alt="">
+          <div>
+            <p>&nbsp;생각보다 축제와 이벤트 관련 정보가 많고 잦은 업데이트로 시간날때마다 이사이트를 통해 알아보고 있어요!</p>
+          </div>
         </div>
       </div>
       <div class="gallery">
         <h2>갤러리</h2>
         <ul>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
+          <li><a href=""><img src="./data/gallery1.jpg" alt=""></a>데이지 축제</li>
+          <li><a href=""><img src="./data/gallery2.jpg" alt=""></a>코스모스 축제</li>
+          <li><a href=""><img src="./data/gallery3.jpg" alt=""></a>바다여행</li>
         </ul>
       </div>
       <div class="notice">
         <h2>공지사항</h2>
-        <ul>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-          <a href=""></a>
-        </ul>
+        <div>
+          <a href="">이벤트 참여 양식<span>2024.07.01</span></a>
+          <a href="">웹사이트 이용시 주의 사항<span>2024.07.01</span></a>
+          <a href="">혼자 떠나는 여행 신청서<span>2024.07.01</span></a>
+          <a href="">다같이 떠나는 여행 신청서<span>2024.06.30</span></a>
+          <a href="">여름을 맞이하는 자세 이벤트<span>2024.06.29</span></a>
+        </div>
       </div>
     </div>
   </main>
 
 
   <footer>
-    <div class="footer-logo"></div>
-    <div class="copyrighter"></div>
-    <div class="sns"></div>
+    <div class="footer-logo">
+      <a href="#"><img src="./data/footer_logo.png" alt="footer logo"></a>
+    </div>
+    <div class="copyrighter">
+      <ul>
+        <li><a href="">기업소개</a></li>
+        <li><a href="">이용약관 개인정보처리방침</a></li>
+        <li><a href="">이메일무단수집거부</a></li>
+        <li><a href="">사이트맵</a></li>
+      </ul>
+      <p>COPYRIGHTER&copy; copyrighter
+      </p>
+    </div>
+    <div class="sns">
+
+    </div>
   </footer>
 
   <div id="popup">
 
   </div>
-  <div class="spot-menu">
-    <div>로그인</div>
-    <div>회원가입</div>
-  </div>
+  <aside id="spot-menu">
+    <div>
+      <div>ID <div></div></div>
+      <div>PASSWORD <div></div></div>
+      <div>
+        <div>로그인</div>
+        <div>회원가입</div>
+      </div>
+    </div>
+    <div class="aside_close"></div>
+  </aside>
 </body>
 </html>
