대체 왜 js가 안돼!!

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>오늘은 축제다!</title>
 
   <link rel="stylesheet" href="./css/main.css">
 
@@ -80,7 +80,6 @@
 
 
       <div class="tab">
-
         <ul class="tabmenu">
           <li class="active">
             <a href="#gallery">갤러리</a>
@@ -89,7 +88,7 @@
             <a href="#notice">공지사항</a>
           </li>
         </ul>
-          
+        
         <div id="gallery" class="active">
           <ul>
             <li><a href=""><img src="./data/gallery1.jpg" alt=""></a>데이지 축제</li>
@@ -150,5 +149,8 @@
     </div>
     <div class="aside_close"></div>
   </aside>
+
+  <script src="./js/jquery-1.12.3.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
