--- a/index.html
+++ b/index.html
@@ -51,13 +51,37 @@
 
     <div class="swapper">
       <ul class="slide-img">
-        <li class="slide"><a href="#"><img src="./data/slide1.jpg" alt="slide 1"></a></li>
-        <li class="slide"><a href="#"><img src="./data/slide2.jpg" alt="slide 2"></a></li>
-        <li class="slide"><a href=""><img src="./data/slide3.jpg" alt="slide 3"></a></li>
-      </ul>
+        <li>
+          <a href="#">
+            <img src="./data/slide1.jpg" alt="slide1">
+          </a>
 
+        </li>
+        <li>
+          <a href="#">
+            <img src="./data/slide2.jpg" alt="slide2">
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./data/slide3.jpg" alt="slide3">
+          </a>
+        </li>
+      </ul>
       
+      <div class="radio-buttons">
+        <input type="radio" name="slide" id="slide1" checked>
+        <label for="slide1"></label>
+        <input type="radio" name="slide" id="slide2">
+        <label for="slide2"></label>
+        <input type="radio" name="slide" id="slide3">
+        <label for="slide3"></label>
+      </div>
+
     </div>
+
+
+
     <div class="contents">
       <div class="review">
         <div class="review_title">
