일단 정리 수정

--- a/index.html
+++ b/index.html
@@ -54,18 +54,29 @@
         <li>
           <a href="#">
             <img src="./data/slide1.jpg" alt="slide1">
+            
           </a>
-
+          <p>떠나자 여름!
+          때로는 시원한 계곡, 시원한 과일!
+          가끔은 청춘처럼 핫하게 이열치열!
+          </p>
         </li>
         <li>
           <a href="#">
             <img src="./data/slide2.jpg" alt="slide2">
           </a>
+          <p>봄의 시작을 알리는 꽃의 퍼레이드
+          꽃들이 속삭이는 이야기는 오직 당신만이 들을 수 있어요.
+          </p>
         </li>
         <li>
           <a href="">
             <img src="./data/slide3.jpg" alt="slide3">
           </a>
+          <p>가을 타는 당신.
+          제법 멋있을 지도..?
+          낙엽 밟는 소리는 쓸쓸한 마음을 채워줘요.
+          </p>
         </li>
       </ul>
       
@@ -85,7 +96,7 @@
     <div class="contents">
       <div class="review">
         <div class="review_title">
-          내 이야기를 들어봐!
+          what's happen?
         </div>
         <div class="shortcut">
         <div class="data1">
